--- a/app/src/main/res/layout/activity_menu_act.xml
+++ b/app/src/main/res/layout/activity_menu_act.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <VideoView
-            android:id="@+id/videoView"
+            android:id="@+id/videov"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.cardview.widget.CardView>
