--- a/app/src/main/res/layout/activity_promociones_act.xml
+++ b/app/src/main/res/layout/activity_promociones_act.xml
@@ -68,26 +68,10 @@
         <TextView
             android:id="@+id/resultado"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="87dp"
+            android:text="ashkjas"
+            android:textSize="25sp"
             tools:visibility="visible" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/saldo"
-                android:layout_width="143dp"
-                android:layout_height="81dp"
-                android:layout_marginTop="7dp"
-                android:layout_marginBottom="27dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
